[gd_scene load_steps=2 format=3 uid="uid://cdkiwccuipfn7"]

[ext_resource type="Script" path="res://ui/menus/pause_menu.gd" id="1_qfets"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qfets")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -76.0
offset_right = 145.5
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1

[node name="BackToGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart Game"

[node name="Audio" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -38.5
offset_right = 183.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Label_Vacio" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"

[node name="Sound" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Sound"

[node name="Label_Vacio2" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2

[node name="Sliders" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Sound_Options" type="Label" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sound  Options"

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.01
value = 1.0

[node name="Sound" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.01
value = 1.0

[node name="Back_Pause_Menu" type="Button" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Confirm
"
